	  block sizes and more efficient use of EEPROM when the AT24 is used to
	  support a file system (such as NXFFS). (Contributed by Hal Glenn).
	* include/nuttx/rgbcolors.h: More fixes to RGB color conversion
	  macros.
	* arch/arm/src/common/up_createstack.c and up_usestack.c:  For ARM EABI
	  the stack must be aligned to 8-byte boundaries.  This is necessary for
	  passing aligned floating point values under EABI.  Fix contributed by
	  David Sidrane.
	* Numerous changes and fixes to the PIC32 interrupt handing logic. The
	  PIC32 port is almost complete but still not ready for prime time.

6.12 2011-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* fs/fat/fs_fat32util.c and fs_fat32.h: Logic extended to look in up to
	  four partitions for a valid FAT file system.
	* drivers/input/tsc2007.c: Add support for 8-bit conversions; make sure
	  that A/D converters are active before requesting conversions.
	* drivers/mmcsd0/mmcsd_sdio.c: Increase capacity variable from size_t
	  to uin64_t (if available) so that SD cards with capacities greater
	  than 4Gb can be supported.
	* fs/fat/fs_fat32dirent.c: The root directory structure is different
	  from other directories.  When formatted by Windows, it is not initialized
	  at all.  Some additional special handling is required to initialize the
	  root directory entry to interoperate correctly with windows.
	* fs/fat/fs_fat32util.c: In fat_systime2fattime(void) should be
	  clock_gettime() and not clock_gettime().  Also, there is a place where
	  FAT date is used instead of FAT time. (Thanks to David Sidrane).
	* arch/arm/src/stm32: Add support for the STM3240xxx MCU family.
	* arch/arm/src/stm32 and arch/arm/include/stm32:  Add support for the
	  STM32F50xxx family of MCUs.
	* configs/stm3240g-eval:  Add framework for the STMicro STM3240G-EVAL
	  board.
	* include/sys/types.h:  wchar_t is a builtin type in C++ and its
	  declaration can cause errors with certain C++ compilers.
